grammar.js
    ident: $ =>
      regexseq(
        regexoptional(/[\\]/),
        /[\u0023-$'.?A-Z^-z~]/,
        regexrepeat(regexchoice(/[\u0023-$'.?A-Z^-z~]/, /[0-9]/))
      ),
    /*
     * boogie.ebnf:133
     * bvlit ::=  [0-9] [0-9]* [b] [v] [0-9] [0-9]*
     */
    comment: $ =>
      /\/\/.*\n/
  }
});
